--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ function MM_swapImage() { //v3.0
 
 <div>
 <!-- Start WOWSlider.com -->
-<iframe src="visor/indexvisor.html" style="width:960px;height:215px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
+<iframe src="visor/indexvisor.html" style="width:960px;height:189px;max-width:100%;overflow:hidden;border:none;padding:0;margin:0 auto;display:block;" marginheight="0" marginwidth="0"></iframe>
 <!-- End WOWSlider.com -->
 <br><ul data-role="listview" data-theme="a" class="ui-listview ui-group-theme-b">
 <li class="ui-first-child ui-last-child">
@@ -143,7 +143,7 @@ function MM_swapImage() { //v3.0
 
 <div data-role="footer" data-theme="a"> 
 <h4>El turismo en Atlixco.</h4>
-<h4>Cardona Rosas Miguel Angel</h4>
+<h4>Miguel Angel Cardona Rosas.</h4>
 </div>
 </div>
 </div>
@@ -172,7 +172,7 @@ function MM_swapImage() { //v3.0
   <img src="imagenes/cecina.jpg" width="200" height="200" align="left">Desde hace ya tiempo, nuestra ciudad se ha dado a conocer por la exquisita cecina que se puede encontrar por los pasillos del mercado y en algunos restaurantes de la ciudad. Esta forma de preparar la carne de res posee el sabor de Atlixco, que por su delgadez es perfecta para servir en una tortilla acompañada de aguacate, queso, crema y una rica salsa.<br> 
 </p>
 <p align="left">&nbsp;</p>
-<p align="left"><font size="4" color="#0000FF">Chiles en nogada.</font><br><img src="imagenes/chiles.jpg" width="200" height="200" align="left">Es el platillo de temporada que envuelve parte de la historia.Representativo del estado de Puebla, tiene su origen en los tiempos de Independencia en homenaje a Agustín de Iturbide. Los colores de la bandera se aprecian con armonía y perfección en este manjar por los meses de julio y agosto, ya que sus ingredientes se logran en esta temporada.</p>
+<p align="left"><font size="4" color="#0000FF">Chiles en nogada.</font><br><img src="imagenes/chiles.jpg" width="153" height="109" align="left">Es el platillo de temporada que envuelve parte de la historia.Representativo del estado de Puebla, tiene su origen en los tiempos de Independencia en homenaje a Agustín de Iturbide. Los colores de la bandera se aprecian con armonía y perfección en este manjar por los meses de julio y agosto, ya que sus ingredientes se logran en esta temporada.</p>
 <p align="left">&nbsp;</p>
 <p align="left"><br>
   <font size="4" color="#0000FF">Mole Poblano.</font><br> <img src="imagenes/mole.jpg" width="200" height="200" align="left">Es el platillo por excelencia en fiestas coloniales que muestra la creatividad de las familias poblanas. Delicioso mole dulce representativo de Puebla, está hecho a base de varios chiles y condimentos, agregando una caricia de chocolate. Su consistencia espesa se acompaña comúnmente de una pieza de guajolote o pollo y se agrada a la vista decorándolo con ajonjolí tostado.<br>
@@ -202,18 +202,18 @@ Antiguamente tenía una fuente de piedra la cual fue reubicada en el parque de l
 <p align="left"><font size="4" color="#0000FF">Atlixcayotontli</font><br>
   <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image22','','imagenes/a2.jpg',1)"><img src="imagenes/a.JPG" width="167" height="127" id="Image22" align="left"></a>El Atlixcayotontli se realiza año con año desde hace 49 años y es organizada principalmente por los fundadores del Huey Atlixcayotontli denominados como “Atlixcayotontli AC.”El Atlixcayotontlil se realiza el segundo domingo del mes de septiembre, mientras el Huey Atlixcayotl se realiza el último domingo del mismo mes y reúne grupos de danza de las once regiones etnogeográficas del Estado de Puebla, desde La región de la Huasteca Poblana en el norte del Estado de Puebla hasta La Región de la Mixteca Poblana en el sur de la entidad. El Atlixcayotontli, reúne grupos de danza y baile, inicia con Bailes de Convite y concluyen con el Rito del Palo Volador.Atlixcayotontli es un motivo más para reconocer parte de nuestra identidad y de la alegría de vivir.</p>
  <p align="left"><font size="4" color="#0000FF">Tapetes Monumentales.</font><br>
-   <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image23','','imagenes/tapete2.jpg',1)"><img src="imagenes/tapete.jpg" width="119" height="80" id="Image23" align="left"></a>Atlixco cuenta como tradición una gran variedad de Tapetes Monumentales como el Tapete Monumental de Flores, el cual es uno de los más atractivos y más importantes del municipio. En esta exhibición se utilizaron 40 mil macetas de 3 plantas cada una, con un total de 120 mil flores que ahora contará con figuras 3D. Además de las figuras en tercera dimensión, se crearon otras 4: Cristo Rey, flores, mariposas y un logo de "Atlixco, Pueblo Mágico, decoradas principalmente con violas de distintos colores como azul, morado, naranja, amarillo, roja, mosaico verde limón colios verdes y rosas, que son las que dan vida al tapete. Este atractivo mide 75 metros de largo y 12 metros de ancho. Adicionalmente se instaló un mirador para que todos los asistentes lo puedan observar detenidamente.</p>
+   <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image23','','imagenes/tapete2.jpg',1)"><img src="imagenes/tapete.jpg" width="159" height="109" id="Image23" align="left"></a>Atlixco cuenta como tradición una gran variedad de Tapetes Monumentales como el Tapete Monumental de Flores, el cual es uno de los más atractivos y más importantes del municipio. En esta exhibición se utilizaron 40 mil macetas de 3 plantas cada una, con un total de 120 mil flores que ahora contará con figuras 3D. Además de las figuras en tercera dimensión, se crearon otras 4: Cristo Rey, flores, mariposas y un logo de "Atlixco, Pueblo Mágico, decoradas principalmente con violas de distintos colores como azul, morado, naranja, amarillo, roja, mosaico verde limón colios verdes y rosas, que son las que dan vida al tapete. Este atractivo mide 75 metros de largo y 12 metros de ancho. Adicionalmente se instaló un mirador para que todos los asistentes lo puedan observar detenidamente.</p>
 <p align="left"><font size="4" color="#0000FF">Villa Iluminada.</font><br>
-  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image24','','imagenes/villa2.jpg',1)"><img src="imagenes/villa.jpg" width="99" height="92" id="Image24" align="left"></a>La “Villa Iluminada” es un recorrido que resalta la belleza arquitectónica de esta ciudad, embelleciéndola con luz. Durante más de cuarenta días las calles formarán un circuito de luz y color, vestidas de figuras y escenas alusivas a la navidad, las tradiciones y la identidad de la ciudad.Los edificios antiguos serán engalanados con luces, lo que destacará su bella arquitectura y valor histórico. l recorrido del espectáculo iniciará en la Calle Hidalgo, bajando hacia el zócalo de Atlixco, pasa por el callejón Constitución y sigue por la calle 4 norte, frente al exconvento de El Carmen, llegará a calle Nicolás Bravo, después al boulevar Ferrocarriles y finalizará en el Parque Revolución.</p>
+  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image24','','imagenes/villa2.jpg',1)"><img src="imagenes/villa.jpg" width="157" height="111" id="Image24" align="left"></a>La “Villa Iluminada” es un recorrido que resalta la belleza arquitectónica de esta ciudad, embelleciéndola con luz. Durante más de cuarenta días las calles formarán un circuito de luz y color, vestidas de figuras y escenas alusivas a la navidad, las tradiciones y la identidad de la ciudad.Los edificios antiguos serán engalanados con luces, lo que destacará su bella arquitectura y valor histórico. l recorrido del espectáculo iniciará en la Calle Hidalgo, bajando hacia el zócalo de Atlixco, pasa por el callejón Constitución y sigue por la calle 4 norte, frente al exconvento de El Carmen, llegará a calle Nicolás Bravo, después al boulevar Ferrocarriles y finalizará en el Parque Revolución.</p>
 <p align="left"><font size="4" color="#0000FF">Fiesta de Reyes.</font><br>
-  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image25','','imagenes/reyes2.jpg',1)"><img src="imagenes/reyes.jpg" width="123" height="108" id="Image25" align="left"></a>La Fiesta de Reyes en Atlixco es una serie de actividades donde disfrutan los más pequeños del hogar y los grandes también en la víspera de los Reyes.Las actividades inician  con el “Festival de la Ilusión”, que se realiza en el cerro de San Miguel, en Atlixco, donde más de tres mil globos llegarán con las cartas de los niños a los tres Reyes Magos, seguido de un show musical para niños, para después dejar volar los globos con la lista de regalos y finalizar con un destello de pirotenia. Finalmente, Fiesta de Reyes se realiza el 5 de enero con el Desfile de carros alegóricos y comparsas, en este los niños y todos los asistentes disfrutan de 35 contingentes que recorren la principales calles de la ciudad, iniciando en el boulevard Rafael Moreno Valle, pasar por el zócalo y concluir en la 21 oriente.</p>
+  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image25','','imagenes/reyes2.jpg',1)"><img src="imagenes/reyes.jpg" width="134" height="130" id="Image25" align="left"></a>La Fiesta de Reyes en Atlixco es una serie de actividades donde disfrutan los más pequeños del hogar y los grandes también en la víspera de los Reyes.Las actividades inician  con el “Festival de la Ilusión”, que se realiza en el cerro de San Miguel, en Atlixco, donde más de tres mil globos llegarán con las cartas de los niños a los tres Reyes Magos, seguido de un show musical para niños, para después dejar volar los globos con la lista de regalos y finalizar con un destello de pirotenia. Finalmente, Fiesta de Reyes se realiza el 5 de enero con el Desfile de carros alegóricos y comparsas, en este los niños y todos los asistentes disfrutan de 35 contingentes que recorren la principales calles de la ciudad, iniciando en el boulevard Rafael Moreno Valle, pasar por el zócalo y concluir en la 21 oriente.</p>
 <p align="left"><font size="4" color="#0000FF">La Noche Buena.</font><br>
-  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image26','','imagenes/buena2.jpg',1)"><img src="imagenes/buena.jpg" width="160" height="136" id="Image26" align="left"></a>La Noche buena es una de las producciones más importantes que se realizan en la colonia Cabrera y es aquí en donde los productores cultivan esta  flor para después comercializarla en diversos estados del país, ya que Atlixco ocupa el tercer lugar en el país de producción y el primer lugar en el estado de Puebla. Aunque la feria se realiza en el Centro Expositor de Atlixco, los turistas acostumbran visitar la colonia Cabrera, lugar que alberga los viveros, pues no solo van en busca de la nochebuena, sino que aprovechan su visita para llevarse plantas de ornato como son las rosas, palo de Brasil, palmeras o incluso las amas de casa se llevan plantas como epazote, tomillo, orégano, manzanilla, hierbabuena, menta, por mencionar algunas.</p>
+  <a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('Image26','','imagenes/buena2.jpg',1)"><img src="imagenes/buena.jpg" width="168" height="142" id="Image26" align="left"></a>La Noche buena es una de las producciones más importantes que se realizan en la colonia Cabrera y es aquí en donde los productores cultivan esta  flor para después comercializarla en diversos estados del país, ya que Atlixco ocupa el tercer lugar en el país de producción y el primer lugar en el estado de Puebla. Aunque la feria se realiza en el Centro Expositor de Atlixco, los turistas acostumbran visitar la colonia Cabrera, lugar que alberga los viveros, pues no solo van en busca de la nochebuena, sino que aprovechan su visita para llevarse plantas de ornato como son las rosas, palo de Brasil, palmeras o incluso las amas de casa se llevan plantas como epazote, tomillo, orégano, manzanilla, hierbabuena, menta, por mencionar algunas.</p>
 <div data-role="collapsible" data-content-theme="false"> 
 <h1>Video.</h1>
 <div>
 <p align="left">A continuación se te muestra un video para que te des la idea de como es el el turismo de Atlixco.</p>
-<iframe width="360" height="215" src="https://www.youtube.com/embed/hJE4SR4tiww" frameborder="0" allowfullscreen></iframe>
+<iframe width="260" height="215" src="https://www.youtube.com/embed/hJE4SR4tiww" frameborder="0" allowfullscreen></iframe>
 <br>
 </div> 
 </div>
@@ -222,7 +222,7 @@ Antiguamente tenía una fuente de piedra la cual fue reubicada en el parque de l
 <h1>Página de Atlixco.</h1>
 <div>
 <p align="left">Para más información sobre Atlixco consulta esta página:</p>
-<iframe width="360" height="215" src="http://atlixco.com/" frameborder="0" allowfullscreen></iframe>
+<iframe width="260" height="215" src="http://atlixco.com/" frameborder="0" allowfullscreen></iframe>
 <br>
 </div> 
 </div>
@@ -235,7 +235,7 @@ Antiguamente tenía una fuente de piedra la cual fue reubicada en el parque de l
 </div>
 <div data-role="footer" data-theme="a"> 
 <h4>El turismo en Atlixco.</h4>
-<h4>Cardona Rosas Miguel Angel</h4>
+<h4>Miguel Angel Cardona Rosas.</h4>
 </div>
 </div>
 </div>
